[MAPS3D-841][MAPS3D-923]  Add ground flood lighting and AO in draped mode - close mismatch between drape and immediate mode (internal-533)
* Implementation on draped mode.

* Some clean up and also fix debug overdraw not being rendered correctly

* pass ground shadow factor as a uniform instead of calculating it in the fragment shader, some minor refactoring

* remove redundant nan prevention

* review fixes

* remove redundant ifdefs

* post rebase update expectation

* update expectation

--- a/debug/3d-playground.html
+++ b/debug/3d-playground.html
@@ -402,7 +402,8 @@ var map = window.map = new mapboxgl.Map({
     style: window.dynamic,
     hash: true,
     projection: 'globe',
-    useWebGL2: true
+    useWebGL2: true,
+    optimizeForTerrain: true
 });
 
 const r = 255 * 0.75;
