Use Standard Style if no style is set (internal-619)
* Use Standard Style if no style is set

* Use config for referencing the default style

--- a/debug/index.html
+++ b/debug/index.html
@@ -22,9 +22,8 @@ var map = window.map = new mapboxgl.Map({
     container: 'map',
     zoom: 12.5,
     center: [-122.4194, 37.7749],
-    style: 'mapbox://styles/mapbox/streets-v11',
+    useWebGL2: true,
     hash: true,
-    projection: 'globe'
 });
 
 </script>
