[MAPS3D-811] Elevate symbols over roofs (internal-676)
* Compute evaluated height for symbols over fill extrusions. dynamic style POI changed to support it for POI

* render elevated symbols

* Optimizing fill extrusion lookup and zOffset buffer upload frequency

* building index file

* Landmarks

* symbol placement sorting tiles by Y and within tiles by z offset

SymbolInstance struct:
- add zOffset field
- reorder symbol instance struct array to fit the additional float within the same size.

Rename symbol-z-elevation property to symbol-z-from-buildings

Sort tiles by viewport Y and sort within tile by z offset. Bookkeep when there are changes in data to avoid unnecessary buffer upload and resorting.

In this PR, didn't want to "fix" viewport y sorting across tiles, deliberately disabled after https://github.com/mapbox/mapbox-gl-js/pull/5150#issuecomment-326438377. Instead, z offset sorts tiles by viewport y and then by z offset.

* lint and flow fixes

* render tests

landmark-z-offset-scale-munich-museum validates the path where elevation is fetched from fill extrusion and different scale is used for FE and model layer.

* Increase allowed for test/integration/render-tests/regressions/mapbox-gl-js#10170

flaky on windows bot

* revert back te renaming to symbol-z-elevate

* Port triangle grid offset fix

pushed to gl-native in https://github.com/mapbox/mapbox-gl-native-internal/pull/5058

* update test/unit/util/triangle_grid_index.test.js expectations

* Explicit documentation about sorting

* resolve conflict in debug/dynamic.js. doc update

* merge conflict

* Increase allowed to cover issues on native linux bots

--- a/debug/3d-playground.html
+++ b/debug/3d-playground.html
@@ -143,7 +143,7 @@ const demo3d = new Demo3D();
 
 function updateLights(enable, loadFromStyleIfPresent) {
     const currentLights = map.getLights();
-    if (currentLights && loadFromStyleIfPresent) {
+    if (currentLights && currentLights[0].type !== 'flat' && loadFromStyleIfPresent) {
         demo3d.enable3dLights = true;
         const cDirectional = parseCSSColor(currentLights[0].properties.color); // eslint-disable-line
         demo3d.directionalLightColor = {r: cDirectional[0], g: cDirectional[1], b: cDirectional[2]};
