fix terrain around landmarks (internal-804)
* fix terrain around landmarks

initial poc implementation

* Fix waves on terrain

* don't fix terrain for landmarks with footprint terrain variation in 0.5m

In NY: 11 not fixed, ~110 fixed.

If 1m would be used instead of 0.5: 27 not fixed / 81 fixed.

* Add terrain and hillshade to dynamic.s

* use terrain spec from dynamic.js

fix griffith observatory as it is on tile border

* dem_data: call new Float32Array once

* Fix MAPS3D-1074. render test for griffith observatory

* max dem set to 12 to correspond to landmarks

* revert to 514. fixing comments

* fix terrain sampling for 514x514 dem tiles

* process review comments. unit test for https://mapbox.atlassian.net/browse/MAPS3D-1073

* Update expected.png

* Update windows-chrome.js

* add render test for enabling terrain

--- a/debug/3d-playground.html
+++ b/debug/3d-playground.html
@@ -69,7 +69,7 @@
 const Demo3D = function() {
     this.enableTerrain = false;
     this.enable3dLights = true;
-    this.terrainExaggeration = 1.5;
+    this.terrainExaggeration = 1.;
     this.animateCamera = false;
     this.style = 'dynamic';
     this.sunAltitude = 2;
@@ -444,15 +444,19 @@ let first = true;
 map.on('style.load', function() {
     // map.showOverdrawInspector =  true;
     updateLights(demo3d.enable3dLights, true);
-    map.addSource('mapbox-dem', {
-        "type": "raster-dem",
-        "url": "mapbox://mapbox.mapbox-terrain-dem-v1",
-        "tileSize": 512,
-        "maxzoom": 14
-    });
+    if (!map.getSource('mapbox-dem')) {
+        map.addSource('mapbox-dem', {
+            "type": "raster-dem",
+            "url": "mapbox://mapbox.mapbox-terrain-dem-v1",
+            "tileSize": 514,
+            "maxzoom": 11
+        });
+    }
     map.style.setPaintProperty("trees", "model-cutoff-fade-range", 1.0);
     map.style.setPaintProperty("3d-building", "fill-extrusion-cutoff-fade-range", 0.5);
-    map.setTerrain(demo3d.enableTerrain ? {"source": "mapbox-dem", "exaggeration": 1.5} : null);
+    if (demo3d.enableTerrain && map.getTerrain() === null) {
+        map.setTerrain({"source": "mapbox-dem", "exaggeration": 1.});
+    }
     demo3d.buildingExtrusion = map.style._order.find((id) => map.style.getLayer(id).type === 'fill-extrusion' && map.style.getLayer(id).sourceLayer === 'building');
     if (!demo3d.buildingExtrusion) {
         demo3d.buildingExtrusion = 'extrusion';
