[MAPS3D-874] stars: optimization and update values for standard style (internal-820)
* update stars values for standard style
* change 3d-playground star defaults
* optimize stars not to render if sky not visible

--- a/debug/3d-playground.html
+++ b/debug/3d-playground.html
@@ -79,7 +79,7 @@ const Demo3D = function() {
     this.animateSky = false;
     this.sunHaloColor = {r:255, g:255, b:255};
     this.skyColor = {r:255, g:255, b:255};
-    this.starIntensity = 1.0;
+    this.starIntensity = 0.35;
     this.fogColor = {r:255, g:255, b:255};
     this.fogRangeMin = 3.0;
     this.fogRangeMax = 10.0;
@@ -211,6 +211,7 @@ window.onload = function() {
     const style = gui.addInput(demo3d, 'style',
         {options: fillOptions([
             'mapbox/streets-v12',
+            'mapbox/standard-beta',
             'dynamic',
             'mapbox/streets-v11',
             'mapbox/satellite-streets-v11',
