Disable terrain on zoom-dependent expression 0. Smoothens zoom gesture on dynamic terrain. (internal-822)
* Smoothens zoom gesture on dynamic terrain

This doesn't make that picked point is under cursor.
Move exaggeration evaluation from style to Terrain to throttle it. apply zoom immediately there - style evaluation is deferred for several frames after transform.zoom change.

Reduces trembling of terrain when zooming over mountain peaks

* keep evaluated zoom fixed during panning

* Update dynamic.js

transition happens 14->15

* avoid long fog when zooming in

* cleanup. render test

- Make the camera behave the same regardless if it is gesture or programatic
- revert complex (and wrong) anticipation of zoom delta in handler_manager
- fix fog covering full screen on zooming to 0

* process review comment

* Update terrain.js

Disable terrain when zoom dependent expression evaluates to 0

* Update terrain.js

revert special memory pool handling for disabling terrain on exaggeration

* update render test

- Disable cut off range initially to keep the original style (editing modifies fill extrusion layer)
- dynamic.js exaggeration drops 13.0 to 13.7
- update render test

* backport constant elevation from native PR

* fix elevation-not-yet-available

keep the camera above other tiles

* Fix issue with slow movement. ScrollZoom - stop inertia on recenter zoom of different sign

exaggeration should jump to evaluated value only outside dynamic range

On inertial recenter could lead to higher zoom (terrain is curvy) and it is important to stop zooming back (is alst zoom was in)

--- a/debug/3d-playground.html
+++ b/debug/3d-playground.html
@@ -97,7 +97,7 @@ const Demo3D = function() {
     this.floodLightGroundAttenuation = 0.69;
     this.buildingColor = {r:255, g:255, b:255};
     this.buildingOpacity = 1;
-    this.cutoffFadeRange = 0.5;
+    this.cutoffFadeRange = 0.0;
     this.ambientLightColor = {r:255, g:255, b:255};
     this.ambientLightIntensity = 0.5;
     this.directionalLightColor = {r:255, g:255, b:255};
@@ -453,8 +453,8 @@ map.on('style.load', function() {
             "maxzoom": 11
         });
     }
-    map.style.setPaintProperty("trees", "model-cutoff-fade-range", 1.0);
-    map.style.setPaintProperty("3d-building", "fill-extrusion-cutoff-fade-range", 0.5);
+    map.style.setPaintProperty("trees", "model-cutoff-fade-range", demo3d.cutoffFadeRange);
+    map.style.setPaintProperty("3d-building", "fill-extrusion-cutoff-fade-range", demo3d.cutoffFadeRange);
     if (demo3d.enableTerrain && map.getTerrain() === null) {
         map.setTerrain({"source": "mapbox-dem", "exaggeration": 1.});
     }
