--- a/debug/3d-playground.html
+++ b/debug/3d-playground.html
@@ -142,6 +142,8 @@ const Demo3D = function() {
     this.debug.unexaggerated = 0;
     this.terrainElevationDebugWidget.addMonitor(this.debug, 'exaggerated');
     this.terrainElevationDebugWidget.addMonitor(this.debug, 'unexaggerated');
+
+    this.debug.numShadowCascadesRendered = 2; // Default value until view is moved
 };
 
 const demo3d = new Demo3D();
@@ -286,6 +288,8 @@ window.onload = function() {
             map.transform.freezeTileCoverage = demo3d.debug.freezeTileCoverage;
             map._update();
         });
+
+        debug.addMonitor(demo3d.debug, 'numShadowCascadesRendered');
     }
 
     // Lights
@@ -548,6 +552,13 @@ map.on('style.load', function() {
         demo3d.debug.unexaggerated = map.queryTerrainElevation(map.unproject(e.point), {exaggerated: false});
 
         demo3d.terrainElevationDebugWidget.refresh();
+    });
+    map.on('move', (e) => {
+        demo3d.debug.numShadowCascadesRendered = 0;
+        const shadowRenderer = map.painter.shadowRenderer;
+        if (shadowRenderer) {
+            demo3d.debug.numShadowCascadesRendered = shadowRenderer._numCascadesToRender;
+        }
     });
 
     const lerp = (a, b, t) => {
