Switch default style from standard-beta to standard (internal-910)

--- a/debug/3d-playground.html
+++ b/debug/3d-playground.html
@@ -213,6 +213,7 @@ window.onload = function() {
     const style = gui.addInput(demo3d, 'style',
         {options: fillOptions([
             'mapbox/streets-v12',
+            'mapbox/standard',
             'mapbox/standard-beta',
             'dynamic',
             'mapbox/streets-v11',
