Host local fork of standard style and change saturation using config
A local copy of standard-style.json is fetched using https://api.mapbox.com/styles/v1/mapbox/standard?access_token= and saved to debug/ folder.
debug/standard-style.html page is changed to use the local style.

Style was edited: a config for saturation coeficient has been added, and as an example, background color was changed to use the saturation coeficient config value.

To edit the style, open debug/standard-style.json in text editor. To explore the results, run `yarn start-debug` from root directory and open http://localhost:9966/debug/standard-style.html in browser.

--- a/debug/standard-style.html
+++ b/debug/standard-style.html
@@ -74,7 +74,7 @@
         });
 
         const styles = [
-            'dynamic',
+            'http://localhost:9966/debug/standard-style.json',
             'mapbox://styles/mapbox/standard',
             'mapbox://styles/mapbox-map-design/standard-rc',
             'mapbox://styles/mapbox-map-design/standard-experimental'
@@ -87,7 +87,7 @@
             container: 'map',
             center: [0, 0],
             zoom: 0,
-            style: window.dynamic,
+            style: styles[0],
             hash: true
         });
 
