--- a/debug/standard-style.html
+++ b/debug/standard-style.html
@@ -6,7 +6,6 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no'>
     <link rel='stylesheet' href='../dist/mapbox-gl.css' />
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/monaco-editor@0.44.0/min/vs/editor/editor.main.min.css'>
     <style>
         body {
             margin: 0;
@@ -42,30 +41,17 @@
         #config::-webkit-scrollbar-thumb:hover {
             background-color: rgba(90, 90, 90);
         }
-
-        #editor {
-            display: none;
-            position: absolute;
-            top: 0px;
-            right: 0px;
-            bottom: 0px;
-            left: 0px;
-            z-index: 200;
-            background-color: pink;
-        }
     </style>
 </head>
 
 <body>
     <div id='map'></div>
     <div id='config'></div>
-    <div id='editor'>Loading...</div>
     <script src='/debug/dynamic.js'></script>
     <script src='../dist/mapbox-gl-dev.js'></script>
     <script src='../debug/access_token_generated.js'></script>
     <script type='module'>
-        import {Pane} from 'https://cdn.jsdelivr.net/npm/tweakpane@4.0.0/dist/tweakpane.min.js';
-        import monacoLoader from 'https://cdn.jsdelivr.net/npm/@monaco-editor/loader@1.4.0/+esm';
+        import {Pane} from 'https://cdn.jsdelivr.net/npm/tweakpane@4.0.3/dist/tweakpane.min.js';
 
         const pane = new Pane({
             title: 'Parameters',
@@ -80,20 +66,27 @@
             'mapbox://styles/mapbox-map-design/standard-experimental'
         ];
 
-        const params = window.params = {style: styles[0]};
+        const defaultStyle = styles[1];
+
+        const params = window.params = {style: defaultStyle, accessToken: mapboxgl.accessToken};
         const arrayToOptions = (arr) => arr.reduce((acc, item) => ({...acc, [item]: item}), {});
 
         const map = window.map = new mapboxgl.Map({
             container: 'map',
-            center: [0, 0],
-            zoom: 0,
-            style: window.dynamic,
+            center: [-74.012499, 40.705441],
+            zoom: 15.27,
+            pitch: 60,
+            bearing: -7,
+            style: defaultStyle,
             hash: true
         });
 
         const dynamicFolders = [];
         const styleBinding = pane.addBinding(params, 'style', {label: 'Style', options: arrayToOptions(styles)});
         styleBinding.on('change', (e) => map.setStyle(e.value === 'dynamic' ? window.dynamic : e.value, {diff: false}));
+
+        const accessTokenBinding = pane.addBinding(params, 'accessToken', {label: 'Access Token'});
+        accessTokenBinding.on('change', (e) => { mapboxgl.accessToken = e.value; });
 
         map.on('style.load', (e) => {
             const style = map.getStyle();
@@ -117,44 +110,6 @@
                     configBinding.on('change', (e) => map.setConfigProperty(id, config, e.value));
                 }
             }
-        });
-
-        const toggleEditorButton = pane.addButton({title: 'Edit Style as JSON'});
-
-        let editor;
-        toggleEditorButton.on('click', async () => {
-            const container = document.getElementById('editor');
-            container.style.display = 'block';
-
-            if (!editor) {
-                const monaco = await monacoLoader.init();
-                container.innerHTML = '';
-                editor = monaco.editor.create(container, {theme: 'vs-dark', language: 'json'});
-            }
-
-            editor.focus();
-            const style = map.getStyle();
-            const styleJSON = JSON.stringify(style, null, 4);
-            editor.getModel().setValue(styleJSON);
-
-            editor.getDomNode().addEventListener('keydown', function (e) {
-                if (e.keyCode === 27) {
-                    container.style.display = 'none';
-                    return;
-                }
-
-                if ((e.metaKey || e.ctrlKey) && e.keyCode === 83) {
-                    e.preventDefault();
-
-                    try {
-                        const nextStyle = JSON.parse(editor.getModel().getValue());
-                        map.setStyle(nextStyle);
-                        container.style.display = 'none';
-                    } catch (e) {
-                        console.error(e);
-                    }
-                }
-            }, false);
         });
     </script>
 </body>
